--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.14"
 dependencies = [
     "loguru>=0.7.3",
     "pydantic-settings>=2.12.0",
+    "typer>=0.21.1",
     "yt-dlp>=2025.12.8",
 ]
 
