feat: add index to filenames

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,6 @@ VIDEO_QUALITY=1080
 MIN_DELAY=1
 MAX_DELAY=5
 
-# File paths
-PLAYLIST_FILE=playlist.txt
-DOWNLOAD_DIR=download
+# Add index to video filenames (01, 02, etc.)
+# true or false
+INDEX_VIDEOS=true
