--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,22 @@
 [project]
 name = "yt-grabber"
 version = "0.1.0"
-description = "YouTube playlist downloader CLI tool"
+description = "A CLI tool for downloading videos from YT playlists and channels"
+authors = [
+    {name = "Elisei"}
+]
+license = {text = "MIT"}
+keywords = ["video", "downloader", "playlist", "cli", "yt-dlp", "media"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: End Users/Desktop",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.14",
+    "Topic :: Multimedia :: Video",
+    "Environment :: Console",
+    "Operating System :: OS Independent",
+]
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
@@ -10,6 +25,10 @@ dependencies = [
     "typer>=0.21.1",
     "yt-dlp>=2025.12.8",
 ]
+
+[project.urls]
+Repository = "https://github.com/elisey/yt-grabber"
+Issues = "https://github.com/elisey/yt-grabber/issues"
 
 [project.scripts]
 yt-grabber = "yt_grabber.cli:main"
