feat: add retry feature

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,11 @@ MAX_DELAY=5
 # Add index to video filenames (01, 02, etc.)
 # true or false
 INDEX_VIDEOS=true
+
+# Number of retry attempts per video (in addition to initial attempt)
+# 0 = no retries, 1 = one retry, etc.
+RETRY_ATTEMPTS=1
+
+# Delay before retry attempt (in seconds)
+# Default: 300 (5 minutes)
+RETRY_DELAY=300
