feat: add telegram notitications

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,14 @@ RETRY_ATTEMPTS=1
 # Delay before retry attempt (in seconds)
 # Default: 300 (5 minutes)
 RETRY_DELAY=300
+
+# Telegram notifications
+# Enable notifications when downloads complete or fail
+TELEGRAM_NOTIFICATIONS_ENABLED=false
+
+# Telegram bot token from @BotFather
+TELEGRAM_BOT_TOKEN=your_bot_token_here
+
+# Telegram chat ID to send messages to
+# Get it from @userinfobot or @getmyid_bot
+TELEGRAM_CHAT_ID=your_chat_id_here
