--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "yt-grabber"
-version = "0.1.3"
+version = "0.1.4"
 description = "A CLI tool for downloading videos from YT playlists and channels"
 authors = [
     {name = "Elisei"}
@@ -24,6 +24,7 @@ requires-python = ">=3.12"
 dependencies = [
     "loguru>=0.7.3",
     "pydantic-settings>=2.12.0",
+    "python-telegram-bot>=21.0",
     "typer>=0.21.1",
     "yt-dlp>=2025.12.8",
 ]
